# devops-agent

./: .gitignore  .gitlab-ci.yml  AGENTIC_FEATURES.md  DEPLOYMENT_GUIDE.md  MCP_RESEARCH.md  NEW_FEATURES_SUMMARY.md  PRODUCTION_CONFIG.md  PROJECT_COMPLETION_REPORT.md  QUICK_START_LOCAL.md  README.md  TESTING_GUIDE.md  atlas-progress.txt  devops-agent-windsurf-prompt.md  devops-tasks.json  test_backend.py
apps/backend-python/: .gitignore  README.md  pyproject.toml  requirements.txt  run_simple.py  test_claude_api.py  test_new_features.py
apps/backend-python/app/: __init__.py  config.py  main.py
apps/backend-python/app/api/: dependencies.py
apps/backend-python/app/api/routes/: agent.py  chat.py  health.py  users.py
apps/backend-python/app/core/: claude.py  claude_agent.py  database.py  execution_engine.py  memory_engine.py  predictive_engine.py  redis.py  security_engine.py  tools.py
apps/backend-python/app/core/executors/: __init__.py  kubernetes.py  system.py
apps/database/: postgresql.yaml  rabbitmq.yaml  redis.yaml
apps/frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: AgentChat.tsx  AgentChatManus.tsx  ChatInterface.tsx  Header.tsx
apps/payload-cms/: package.json
apps/payload-cms/src/: payload.config.ts  server.ts
apps/rust-backend/: Cargo.toml
apps/rust-backend/src/: main.rs
docker/: .dockerignore  Dockerfile.nextjs  Dockerfile.python  Dockerfile.rust
docs/: FEATURE_ANALYSIS_COMPETITORS.md  QUICKSTART.md  SYSTEM_PROMPT_GUIDE.md
docs/architecture/: overview.md
docs/runbooks/: deployment.md  disaster-recovery.md  rollback.md
kubernetes/apps/: backend-deployment.yaml  frontend-deployment.yaml
kubernetes/backup/: postgresql-backup-cronjob.yaml  velero-deployment.yaml  velero-values.yaml
kubernetes/base/: deployment-template.yaml  kustomization.yaml  minio-deployment.yaml  namespaces.yaml  network-policies.yaml  rbac.yaml  resource-quotas.yaml
monitoring/grafana/dashboards/: cost-optimization.json  kubernetes-overview.json  slo-dashboard.json
monitoring/loki/: values.yaml
monitoring/prometheus/: alerts.yaml  slo-alerts.yaml  values.yaml
scripts/maintenance/: cleanup.sh  maintenance-cronjob.yaml
security/infisical/: deployment.yaml  operator.yaml
terraform/: main.tf
terraform/modules/namespaces/: main.tf
