[tool.poetry]
name = "devops-agent-backend"
version = "1.0.0"
description = "DevOps Agent Backend with Claude API Integration"
authors = ["ATLAS <atlas@devops-agent.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.122.0"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}
anthropic = "^0.44.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
redis = "^5.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
prometheus-client = "^0.21.1"
opentelemetry-api = "^1.29.0"
opentelemetry-sdk = "^1.29.0"
opentelemetry-instrumentation-fastapi = "^0.50b0"
httpx = "^0.27.0"
tenacity = "^9.0.0"
# MCP and execution
mcp = "^1.5.0"
kubernetes = "^31.0.0"
docker = "^7.1.0"
GitPython = "^3.1.45"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
